# imessage-mcp

./: .gitignore  CLAUDE.md  README.md  requirements.txt
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/imessage-texting/: SKILL.md
benchmarks/: benchmark_runner.py  config.py  run_benchmarks.py
benchmarks/results/: rust_vs_python_benchmark.json
commands/: imessage.md
gateway/: README.md  benchmark_results.json  benchmarks.py  benchmarks_cpp.py  go.mod  imessage_client.py  main.go
gateway-rs/: Cargo.toml  README.md
gateway-rs/src/: contacts.rs  main.rs  messages.rs  util.rs
gateway/cpp/: CMakeLists.txt  Makefile  README.md  imessage_client.cpp  imessage_gateway.cpp  main.cpp
gateway/go/: go.mod  main.go
gateway/wolfies-imessage/src/daemon/: service.rs
gateway/wolfies-imessage/src/db/: helpers.rs  queries.rs
mcp_server/: server.py
scripts/: notify_follow_ups.py  test_mcp_protocol.py
skills/imessage-gateway/: SKILL.md
src/: messages_interface.py
src/rag/unified/: imessage_indexer.py  index_state.py
tests/: test_performance.py
