[package]
name = "imessage-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
home = "0.5"
fuzzy-matcher = "0.3"
regex = "1"
thiserror = "1"
anyhow = "1"
