[package]
name = "gateway-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust CLI gateway for fast iMessage access"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
home = "0.5"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
